@@ -1,515 +1,360 @@
-Here's the **Low-Level Design (LLD)** for the entire **Potential Matches Creation Module**, including architectural diagrams, sequence flows, data models, concurrency control, failure handling, and observability.
+# Potential Matches Creation Module
+## Enterprise-Grade Batch Matching System for Large-Scale Node Datasets
 
 ---
 
-# **Low-Level Design: Potential Matches Creation System**
+## Executive Summary
+This is a production-ready, Spring Boot-based batch processing module designed to compute potential similarity matches between millions of graph nodes across multiple domains and matching groups. The system runs a daily scheduled workflow, leveraging asynchronous processing, high-performance intermediate storage (LMDB), and fault-tolerant design to handle terabyte-scale datasets while ensuring consistency and observability.
 
-## 1. **Overview**
-A **scheduled, distributed batch matching engine** that:
-- Processes groups of entities (nodes) within domains.
-- Generates potential matches using similarity strategies (LSH-based or flat).
-- Buffers, persists, and finalizes matches with fault tolerance.
-- Supports both **symmetric** (within-group) and **bipartite** (cross-partition) matching.
+### Key Technical Highlights
+- **Scalability**: Processes 10M+ nodes per batch with chunked parallel processing
+- **Fault Tolerance**: Built-in retries, timeouts, idempotent operations, and resumable cursor-based pagination
+- **Performance**: Uses LMDB for low-latency intermediate match storage and PostgreSQL bulk COPY operations for efficient persistent storage
+- **Observability**: Full Micrometer instrumentation for metrics tracking and structured logging
+- **Concurrency Control**: Semaphore-based throttling to prevent resource exhaustion across domains and graph builds
 
 ---
 
-## 2. **High-Level Architecture Diagram**
-
+## System Architecture
+### High-Level Component Diagram
 ```mermaid
-graph TD
-    A[Scheduler Trigger] --> B[PotentialMatchesCreationScheduler]
-    B --> C[Per-Domain & Per-Group Processing]
-    C --> D1[Domain Semaphore]
-    C --> D2[Group Semaphore]
-    D2 --> E[PotentialMatchesCreationJobExecutor]
-    E --> F[NodeFetchService: Paginated Node Retrieval]
+flowchart TD
+    A[Scheduled Trigger<br/>@Scheduled Cron Job] --> B[PotentialMatchesCreationScheduler]
+    B --> C[PotentialMatchesCreationJobExecutor]
+    C --> D[NodeFetchService]
+    D --> E[NodeRepository]
+    C --> F[PotentialMatchServiceImpl]
     F --> G[GraphPreProcessor]
-    G --> H{Symmetric or Bipartite?}
-    H -->|Symmetric| I[SymmetricGraphBuilder + LSHIndex]
-    H -->|Bipartite| J[BipartiteGraphBuilder]
-    I & J --> K[Edge Generation → PotentialMatch Entities]
-    K --> L[QueueManager: Buffering]
-    L --> M["Periodic Flush to GraphStore \(MapDB\)"]
-    M --> N[Finalize: Stream Top-K → Save to PostgreSQL]
-    N --> O[Cleanup & Metrics]
-
+    G --> H[SymmetricGraphBuilder]
+    H --> I[SymmetricEdgeBuildingStrategyFactory]
+    G --> J[BipartiteGraphBuilderService]
+    H --> K[PotentialMatchComputationProcessor]
+    K --> L[GraphStore]
+    L --> M[UnifiedWriteOrchestrator]
+    M --> N[LMDB Storage]
+    K --> O[PotentialMatchSaver]
+    O --> P[PotentialMatchStorageProcessor]
+    P --> Q[PostgreSQL Database]
+    B --> R[MatchesCreationFinalizer]
+    S[MeterRegistry] -->|Metrics| B & C & D & F & G & H & K & P
 ```
 
 ---
 
-## 3. **Component Diagram**
+## Core Batch Processing Workflow
+### End-to-End Sequence Diagram
+```mermaid
+sequenceDiagram
+    participant Scheduler as PotentialMatchesCreationScheduler
+    participant JobExecutor as PotentialMatchesCreationJobExecutor
+    participant NodeFetch as NodeFetchService
+    participant MatchService as PotentialMatchServiceImpl
+    participant GraphPre as GraphPreProcessor
+    participant GraphBuilder as SymmetricGraphBuilder
+    participant MatchProcessor as PotentialMatchComputationProcessor
+    participant Storage as PotentialMatchStorageProcessor
+    participant LMDB as LMDB Storage
+    participant PG as PostgreSQL
 
+    Note over Scheduler: Daily Trigger (11:05 AM IST)
+    Scheduler->>Scheduler: Generate unique cycleId
+    Scheduler->>NodeFetch: Fetch active domains + matching groups
+    Scheduler->>JobExecutor: Initialize group processing tasks
+
+    loop For Each Matching Group
+        JobExecutor->>NodeFetch: Fetch nodes via cursor pagination
+        NodeFetch->>PG: Retrieve unprocessed node IDs
+        NodeFetch->>JobExecutor: Return node ID page
+        JobExecutor->>MatchService: Process node batch
+        MatchService->>NodeFetch: Hydrate node metadata
+        MatchService->>GraphPre: Resolve weight function + build graph
+        GraphPre->>GraphBuilder: Route to symmetric graph build
+        GraphBuilder->>GraphBuilder: Chunk nodes + parallel processing
+        GraphBuilder->>MatchProcessor: Enqueue potential matches
+        MatchProcessor->>LMDB: Persist matches to intermediate storage
+    end
+
+    loop Final Persistence
+        MatchProcessor->>LMDB: Stream matches from LMDB
+        MatchProcessor->>Storage: Bulk save to PostgreSQL
+        Storage->>PG: Use COPY for high-throughput inserts
+    end
+
+    Scheduler->>Scheduler: Cleanup locks + notify finalizer
+```
+
+---
+
+## Key Component Deep Dive
+
+### 1. Orchestration Layer
+#### `PotentialMatchesCreationScheduler`
+The system's entry point and workflow coordinator:
+- **Responsibilities**:
+    - Triggers daily batch runs via Spring Scheduler cron job (`0 5 11 * * * Asia/Kolkata`)
+    - Manages concurrency with a domain-level semaphore to prevent overloading shared resources
+    - Ensures sequential processing of matching groups using a `ConcurrentHashMap` lock map
+    - Handles global cycle timeouts (3-hour hard limit) and failure cleanup
+- **Design Highlight**: Validates executor pool size to avoid deadlocks by ensuring the batch executor has at least `max-concurrent-domains + 2` threads
+
+---
+
+### 2. Job Execution Layer
+#### `PotentialMatchesCreationJobExecutor`
+Manages recursive, resumable node batch processing:
+- **Responsibilities**:
+    - Uses cursor-based pagination to fetch nodes incrementally, persisting cursor state to resume processing after interruptions
+    - Implements exponential backoff retries for failed node batches (3 max retries with 1s base delay)
+    - Stops processing after 3 consecutive empty batches to avoid infinite loops
+- **Key Optimization**: Sliding window pagination with 200-node overlap to prevent missing cross-batch matches
+
+#### `NodeFetchService`
+Handles all node data retrieval and state management:
+- **Responsibilities**:
+    - Hydrates node metadata from the database in sub-batches to manage memory usage
+    - Marks nodes as processed after successful matching to ensure idempotency
+    - Persists cursor state (last processed node ID and timestamp) to enable resumable processing
+- **Design Highlight**: Uses a semaphore to limit concurrent database fetch operations to 4, preventing database overload
+
+---
+
+### 3. Graph Processing Layer
+#### `WeightFunctionResolver`
+Dynamically resolves matching strategies based on node metadata:
+- **Responsibilities**:
+    - Discovers distinct metadata keys for each matching group
+    - Generates a unique weight function key from valid metadata keys
+    - Registers new weight functions with the `WeightFunctionRegistry` if they do not exist
+    - Falls back to a "flat" default strategy if no valid metadata is found
+
+#### `GraphPreProcessor`
+Coordinates graph construction and concurrency management:
+- **Responsibilities**:
+    - Uses a semaphore to limit concurrent graph builds (default: 2 concurrent builds)
+    - Automatically infers match type (symmetric/bipartite) based on node types or partition configuration
+    - Enforces a 45-minute hard timeout for graph builds to prevent stuck operations
+    - Can determine match type from existing LMDB edges if no partition configuration is provided
+
+#### `SymmetricGraphBuilder`
+Implements parallel symmetric graph construction:
+- **Responsibilities**:
+    - Splits node datasets into configurable chunks (default: 500 nodes per chunk)
+    - Spawns parallel worker threads (default: 8 workers) to process chunk cross-product tasks
+    - Integrates with edge building strategies to compute potential matches
+    - Flushes pending matches to LMDB and streams final matches to PostgreSQL after processing
+- **Design Highlight**: Uses a Caffeine cache to track cleanup guards for graceful shutdown handling
+
+#### `SymmetricEdgeBuildingStrategyFactory`
+Creates specialized edge matching strategies:
+- **Flat Strategy**: Lightweight default strategy for groups with no metadata
+- **Metadata-Based Strategy**: Uses Locality-Sensitive Hashing (LSH) to efficiently find similar nodes, reducing pairwise comparison overhead for large datasets
+
+---
+
+### 4. Processing & Storage Layer
+#### `PotentialMatchComputationProcessorImp`
+Manages match queueing, intermediate storage, and final persistence:
+- **Responsibilities**:
+    - Uses a disk-spilling queue system to handle high-volume match processing without memory exhaustion
+    - Implements backpressure handling to pause queue draining when system resources are overloaded
+    - Persists matches to both LMDB (intermediate storage) and PostgreSQL (persistent storage)
+    - Provides streaming capabilities for final match persistence to handle 100M+ match datasets
+- **Design Highlight**: Graceful shutdown logic that flushes all pending queues before terminating executors
+
+#### `GraphStore` & `UnifiedWriteOrchestrator`
+High-performance LMDB storage orchestration:
+- **UnifiedWriteOrchestrator**: Uses a single dedicated writer thread to eliminate LMDB write contention, with a bounded queue to handle bursty match ingestion
+- **GraphStore**: Wraps LMDB operations for edge persistence and LSH bucket management, with built-in metrics for tracking ingest performance
+- **Key Optimization**: Batches LSH and edge writes to minimize LMDB transaction overhead
+
+#### `PotentialMatchStorageProcessor`
+PostgreSQL persistence layer optimized for bulk operations:
+- **Responsibilities**:
+    - Uses PostgreSQL `COPY` command for high-throughput bulk inserts (up to 50k matches per batch)
+    - Implements advisory locks to prevent concurrent writes to the same matching group
+    - Configures session-level timeouts and optimizations to avoid long-running transactions
+    - Retries deadlock errors with exponential backoff to handle transient database issues
+
+---
+
+## Critical Design Patterns & Optimizations
+| Pattern/Optimization | Use Case | Implementation |
+|-----------------------|----------|----------------|
+| **Producer-Consumer** | Match queueing | `UnifiedWriteOrchestrator` uses a bounded blocking queue to decouple match generation from LMDB persistence |
+| **Semaphore Concurrency Control** | Domain and graph build throttling | Prevents resource exhaustion by limiting concurrent domain processing (default: 2) and graph builds (default: 2) |
+| **Retry Pattern with Exponential Backoff** | Transient error handling | Applied to node batch processing, LMDB persistence, and database operations to handle temporary failures |
+| **Cursor-Based Pagination** | Resumable node fetching | Persists last processed node ID/timestamp to resume batch runs after interruptions |
+| **Chunked Parallel Processing** | Large dataset handling | Splits node datasets into smaller chunks to reduce memory overhead and enable parallel processing |
+| **Bulk Database Inserts** | High-throughput persistence | Uses PostgreSQL `COPY` instead of individual `INSERT` statements to reduce transaction overhead |
+| **Backpressure Handling** | System overload protection | Pauses match queue draining when the save semaphore has fewer than 4 available permits |
+| **Idempotent Operations** | Safe reprocessing | Marks nodes as processed after successful matching to avoid duplicate work |
+
+---
+
+## UML Diagrams
+### Core Class Diagram
 ```mermaid
 classDiagram
     class PotentialMatchesCreationScheduler {
-        -domainSemaphore: Semaphore
-        -groupLocks: ConcurrentMap<UUID, Semaphore>
-        -batchExecutor: ExecutorService
-        +processAllDomainsScheduled()
-        -processGroupTask()
-        -doFlushLoop()
+        +processAllDomainsScheduled() void
+        +processGroupTask(GroupTaskRequest) CompletableFuture~Void~
     }
 
     class PotentialMatchesCreationJobExecutor {
-        -pageSemaphores: ConcurrentMap<UUID, Semaphore>
-        -maxRetries: int
-        -retryDelayMillis: long
-        +processGroup()
-        -processPageWithRetriesSync()
+        +processGroup(UUID, UUID, String) CompletableFuture~Void~
     }
 
-    class PotentialMatchServiceImpl {
-        +matchByGroup()
-        -fetchNodesInSubBatches()
-        -processGraphAndMatchesAsync()
-        -bufferMatchParticipationHistory()
-        -flushHistoryIfNeeded()
+    class NodeFetchService {
+        +fetchNodeIdsByCursor(UUID, UUID, int, String) CompletableFuture~CursorPage~
+        +persistCursor(UUID, UUID, OffsetDateTime, UUID) void
     }
 
     class GraphPreProcessor {
-        -buildSemaphore: Semaphore
-        +build()
-        -acquireAndBuild()
+        +buildGraph(List~NodeDTO~, MatchingRequest) CompletableFuture~GraphResult~
+        +inferMatchType(List~NodeDTO~, List~NodeDTO~) MatchType
     }
 
     class SymmetricGraphBuilder {
-        -computeSemaphore
-        -mappingSemaphore
-        +build()
-        -processChunk()
-        -finalizeGraph()
-    }
-
-    class BipartiteGraphBuilder {
-        -computeSemaphore
-        +build()
-        -processChunks()
-        -submitChunk()
-        -processBipartiteChunk()
-    }
-
-    class MetadataEncoder {
-        +encode()
-        +encodeBatch()
-    }
-
-    class EdgeProcessor {
-        +processBatchSync()
-        -processChunkCandidates()
-    }
-
-    class LSHIndexImpl {
-        -hashTables: List<ConcurrentHashMap>
-        -nodeHashCache: Cache<UUID, short[]>
-        +prepareAsync()
-        +insertBatch()
-        +queryAsyncAll()
-        +clean()
-    }
-
-    class MetadataCompatibilityCalculator {
-        +calculate()
-        -scoreForKey()
-        -isNumericMatch()
-        -isMultiValueMatch()
-    }
-
-    class QueueManagerFactory
-    class QueueManagerImpl {
-        -queue: BlockingQueue
-        -flushScheduler
-        +enqueue()
-        +setFlushInterval()
-        +startPeriodicFlush()
-        +flushQueueBlocking()
+        +build(List~NodeDTO~, MatchingRequest) CompletableFuture~GraphResult~
     }
 
     class PotentialMatchComputationProcessorImp {
-        -saveSemaphore
-        +processChunkMatches()
-        +savePendingMatches()
-        +saveFinalMatches()
-        +streamEdges()
-        +cleanup()
+        +processChunkMatches(ChunkResult, UUID, UUID, String, int) CompletableFuture~Void~
+        +saveFinalMatches(UUID, UUID, String, AutoCloseableStream~Edge~, int) CompletableFuture~Void~
     }
 
-    class GraphStore {
-        -db: MapDB
-        -map: HTreeMap
-        +persistEdgesAsync()
-        +streamEdges()
-        +cleanEdges()
-    }
-
-    class PotentialMatchSaver {
-        +saveMatchesAsync()
-        +deleteByGroupId()
+    class UnifiedWriteOrchestrator {
+        +enqueueEdgeWrite(List~PotentialMatch~, UUID, String) CompletableFuture~Void~
+        +enqueueLshWrite(Long2ObjectMap~List~UUID~~) CompletableFuture~Void~
     }
 
     class PotentialMatchStorageProcessor {
-        +savePotentialMatches()
-        +saveAndFinalizeMatches()
-        +deleteByGroupId()
+        +savePotentialMatches(List~PotentialMatchEntity~, UUID, UUID, String) CompletableFuture~Void~
+        +saveAndFinalizeMatches(List~PotentialMatchEntity~, UUID, UUID, String) CompletableFuture~Void~
     }
 
     PotentialMatchesCreationScheduler --> PotentialMatchesCreationJobExecutor
+    PotentialMatchesCreationJobExecutor --> NodeFetchService
     PotentialMatchesCreationJobExecutor --> PotentialMatchServiceImpl
     PotentialMatchServiceImpl --> GraphPreProcessor
     GraphPreProcessor --> SymmetricGraphBuilder
-    GraphPreProcessor --> BipartiteGraphBuilder
-    SymmetricGraphBuilder --> MetadataEdgeBuildingStrategy
-    MetadataEdgeBuildingStrategy --> EdgeProcessor
-    MetadataEdgeBuildingStrategy --> LSHIndexImpl
-    EdgeProcessor --> MetadataCompatibilityCalculator
-    PotentialMatchComputationProcessorImp --> QueueManagerFactory
-    QueueManagerFactory --> QueueManagerImpl
-    PotentialMatchComputationProcessorImp --> GraphStore
-    PotentialMatchComputationProcessorImp --> PotentialMatchSaver
-    PotentialMatchSaver --> PotentialMatchStorageProcessor
+    SymmetricGraphBuilder --> PotentialMatchComputationProcessorImp
+    PotentialMatchComputationProcessorImp --> UnifiedWriteOrchestrator
+    PotentialMatchComputationProcessorImp --> PotentialMatchStorageProcessor
 ```
 
----
-
-## 4. **Sequence Diagram: Batch Matching for One Group**
-
+### Use Case Diagram
 ```mermaid
-sequenceDiagram
-    participant Scheduler
-    participant JobExecutor
-    participant NodeFetchService
-    participant GraphPreProcessor
-    participant Symmetric/BipartiteBuilder
-    participant LSHIndex
-    participant EdgeProcessor
-    participant QueueManager
-    participant GraphStore
-    participant MatchSaver
-    participant DB(PostgreSQL)
+useCaseDiagram
+    actor SystemAdmin as "System Admin"
+    actor Scheduler as "Scheduled Trigger"
+    actor ExternalSystem as "External System"
 
-    Scheduler->>JobExecutor: processGroup(groupId, domainId, cycleId)
-    JobExecutor->>NodeFetchService: fetchNodeIdsAsync(pageable)
-    NodeFetchService-->>JobExecutor: List<UUID> nodeIds
-    JobExecutor->>NodeFetchService: fetchNodesInSubBatches(nodeIds)
-    NodeFetchService-->>JobExecutor: List<Node> nodes
-    JobExecutor->>GraphPreProcessor: build(nodes, request)
+    usecase "Daily Batch Match Run" as UC1
+    usecase "Resumable Node Processing" as UC2
+    usecase "Graph Match Computation" as UC3
+    usecase "Match Persistence" as UC4
+    usecase "Monitor System Metrics" as UC5
+    usecase "Configure Batch Parameters" as UC6
+    usecase "Receive Completion Notifications" as UC7
 
-    alt Symmetric
-        GraphPreProcessor->>SymmetricGraphBuilder: build()
-        SymmetricGraphBuilder->>LSHIndex: prepareAsync(nodes)
-        LSHIndex-->>SymmetricGraphBuilder: indexed
-        loop Chunk Processing
-            SymmetricGraphBuilder->>EdgeProcessor: processBatch(chunk)
-            EdgeProcessor->>LSHIndex: queryAsyncAll(chunk)
-            EdgeProcessor->>MetadataCompatibilityCalculator: calculate()
-            EdgeProcessor-->>SymmetricGraphBuilder: List<PotentialMatch>
-            SymmetricGraphBuilder->>PotentialMatchComputationProcessor: processChunkMatches()
-            PotentialMatchComputationProcessor->>QueueManager: enqueue(matches)
-        end
-    else Bipartite
-        GraphPreProcessor->>BipartiteGraphBuilder: build(left, right, request)
-        loop Left-Right Chunk Pairs
-            BipartiteGraphBuilder->>BipartiteEdgeBuilder: processBatch(leftChunk, rightChunk)
-            BipartiteEdgeBuilder->>MetadataCompatibilityCalculator: score each pair
-            BipartiteEdgeBuilder-->>BipartiteGraphBuilder: matches
-            BipartiteGraphBuilder->>GraphStore: persistEdgesAsync(matches)
-        end
-        BipartiteGraphBuilder->>GraphStore: streamEdges()
-        BipartiteGraphBuilder->>MatchSaver: saveAndFinalizeMatches()
-        MatchSaver->>DB: COPY + UPSERT
-    end
-
-    GraphPreProcessor->>PotentialMatchComputationProcessor: finalizeGraph()
-    PotentialMatchComputationProcessor->>QueueManager: flush remaining
-    QueueManager->>GraphStore: persistEdgesAsync()
-    GraphStore->>PotentialMatchComputationProcessor: streamEdges()
-    PotentialMatchComputationProcessor->>MatchSaver: saveFinalMatches(stream)
-    MatchSaver->>DB: Save top-K per node
-    DB-->>MatchSaver: success
-    MatchSaver-->>PotentialMatchComputationProcessor: done
-    PotentialMatchComputationProcessor-->>GraphPreProcessor: result
-    GraphPreProcessor-->>JobExecutor: done
-    JobExecutor-->>Scheduler: release locks
+    Scheduler --> UC1
+    Scheduler --> UC2
+    SystemAdmin --> UC5
+    SystemAdmin --> UC6
+    ExternalSystem --> UC7
+    UC1 --> UC3
+    UC3 --> UC4
 ```
 
 ---
 
-## 5. **Data Flow & Models**
+## Observability & Monitoring
+The module is fully instrumented with Micrometer to expose production-grade metrics:
 
-### Core Data Structures
+### Core Metrics
+| Metric Category | Key Metrics |
+|-----------------|-------------|
+| **Batch Cycle** | `batch_matches_total_duration`, `batch_cycle_timeout`, `batch_cycle_failure` |
+| **Node Fetch** | `node_fetch_hydration_duration`, `node_mark_processed_duration`, `node_fetch_error` |
+| **Graph Build** | `graph_build_queue_length`, `graph_preprocessor_duration`, `graph_build_failure` |
+| **Match Processing** | `queue.rejected`, `match.batch.save.time`, `final_save.error` |
+| **Storage** | `edges_written_total`, `lsh.bulk_ingest.success`, `storage_processor_matches_saved_total` |
 
-#### `Node`
-```java
-@Data
-public class Node {
-    private UUID id;
-    private String referenceId; // external ID
-    private String type;        // "patient", "user", etc.
-    private Map<String, String> metaData;
-    private LocalDateTime createdAt;
-}
-```
-
-#### `PotentialMatchEntity` (DB Model)
-```sql
-CREATE TABLE potential_matches (
-    id UUID PRIMARY KEY,
-    group_id UUID NOT NULL,
-    domain_id UUID NOT NULL,
-    processing_cycle_id VARCHAR(36) NOT NULL,
-    reference_id VARCHAR(255) NOT NULL,
-    matched_reference_id VARCHAR(255) NOT NULL,
-    compatibility_score FLOAT NOT NULL,
-    matched_at TIMESTAMP NOT NULL,
-    UNIQUE (group_id, reference_id, matched_reference_id)
-);
-```
-
-#### `MatchingRequest`
-```java
-@Builder
-public class MatchingRequest {
-    UUID groupId;
-    UUID domainId;
-    String processingCycleId;
-    int page, limit;
-    LocalDateTime createdAfter;
-    MatchType matchType; // AUTO, SYMMETRIC, BIPARTITE
-    String partitionKey, leftPartitionValue, rightPartitionValue;
-    String weightFunctionKey;
-}
-```
+### Logging Strategy
+- Structured logging with SLF4J and Logback
+- Unique `cycleId` for tracing entire batch runs
+- Detailed progress logging for long-running operations
+- Error logging with root cause tracking
 
 ---
 
-## 6. **Concurrency & Resource Management**
-
-| Resource | Control Mechanism | Purpose |
-|--------|-------------------|--------|
-| Domains | `Semaphore(maxConcurrentDomains)` | Limit parallel domains |
-| Groups | `ConcurrentMap<UUID, Semaphore(1)>` | Prevent concurrent group processing |
-| LSH Builds | `Semaphore(maxConcurrentBuilds)` | Avoid OOM during indexing |
-| Chunk Compute | `computeSemaphore` in GraphBuilder | Parallel chunk processing cap |
-| DB Persistence | `storageSemaphore` | Throttle concurrent DB writes |
-| Page-Level | `pageSemaphores` per group | Max concurrent pages per group |
-
-> All executors are bounded and monitored via Micrometer gauges.
-
----
-
-## 7. **Error Handling & Recovery**
-
-### Failure Modes & Mitigations
-| Failure | Strategy |
-|--------|----------|
-| Node fetch timeout | Retry up to `maxRetries` with backoff |
-| LSH index build fails | Fallback to flat strategy? (Not implemented – currently retries) |
-| Graph processing OOM | Chunking + semaphore limits |
-| MapDB/Postgres write fails | Async retry + fallback metrics |
-| Thread interrupt | Propagate `InterruptedException`, restore flag |
-| Queue full | Drop matches + metric (`match_drops_total`) |
-| Finalization timeout | Log warning, increment `matches_dropped_due_to_shutdown` |
-
-### Circuit Breaker
-- Used in `BipartiteGraphBuilder.build()` via `@CircuitBreaker`
-- Fallback returns empty graph, logs incident, increments counter
-
-### Retry Policies
-```yaml
-match:
-  max-retries: 3
-  retry-delay-millis: 1000
-graph:
-  chunk-retry.max-attempts: 3
-  chunk-retry.initial-backoff-seconds: 1
-```
-Implemented via:
-- Manual loops + `Thread.sleep()` (LSH/Chunk level)
-- Spring `@Retryable` (DB layer)
+## Fault Tolerance & Resilience
+1.  **Timeouts**:
+    - 3-hour global batch cycle timeout
+    - 45-minute graph build hard timeout
+    - 120-minute domain semaphore acquisition timeout
+    - 60-minute graph build semaphore acquisition timeout
+2.  **Retry Logic**:
+    - 3 retries with exponential backoff for node batch processing
+    - 5 retries with exponential backoff for LMDB persistence
+    - Deadlock-specific retries for database operations
+3.  **Graceful Shutdown**:
+    - Flushes all pending match queues before terminating
+    - Shuts down executor services with configurable timeouts
+    - Cleans up LMDB resources and temporary files
+4.  **Idempotency**:
+    - Nodes are marked as processed after successful matching
+    - Cursor persistence enables resumable processing after interruptions
+    - Database merge operations prevent duplicate match entries
 
 ---
 
-## 8. **Observability (Micrometer Metrics)**
+## Configuration Parameters
+### Core Batch Configuration
+| Parameter | Default Value | Description |
+|-----------|---------------|-------------|
+| `match.max-concurrent-domains` | 2 | Maximum number of concurrent domains processed |
+| `match.batch-limit` | 1000 | Number of nodes fetched per cursor page |
+| `match.max-retries` | 3 | Maximum retries for failed node batches |
+| `match.queue.capacity` | 1,000,000 | In-memory match queue capacity |
 
-### Key Timers
-| Metric | Tags | Purpose |
-|-------|------|--------|
-| `batch_matches_duration` | `groupId, domainId, cycleId` | End-to-end group processing |
-| `graph_build_duration` | `mode=batch|incremental` | Time to generate candidate edges |
-| `lsh_query_duration` | `sampled` | LSH candidate retrieval latency |
-| `storage_processor_batch_duration` | `groupId` | DB insert time |
-| `queue_drain_latency` | `groupId` | Time to flush queue to DB |
+### Graph Build Configuration
+| Parameter | Default Value | Description |
+|-----------|---------------|-------------|
+| `graph.max-concurrent-builds` | 2 | Maximum concurrent graph builds |
+| `graph.chunk-size` | 500 | Node chunk size for parallel processing |
+| `graph.max-concurrent-batches` | 8 | Number of parallel graph build workers |
 
-### Key Counters
-| Metric | Use Case |
-|-------|---------|
-| `matches_generated_total` | Track output volume |
-| `match_drops_total{reason="queue_full"}` | Backpressure signal |
-| `chunk_retry_attempts` | Health of compute layer |
-| `graph_build_errors` | Debugging failed groups |
-| `semaphore.acquire.timeout` | Resource contention alerts |
-
-### Gauges
-- Active threads in executors
-- Queue sizes (`queueManager.getQueueSize()`)
-- LSH bucket sizes, hash collisions
+### Storage Configuration
+| Parameter | Default Value | Description |
+|-----------|---------------|-------------|
+| `matches.save.batch-size` | 50,000 | PostgreSQL bulk insert batch size |
+| `match.save.timeout-seconds` | 300 | Match save operation timeout |
 
 ---
 
-## 9. **Persistence Layers**
-
-### Two-Tier Storage Strategy
-| Layer | Technology | Role |
-|------|-----------|------|
-| **Stage 1: Temporary** | MapDB (Disk-backed, memory-mapped) | High-speed buffer for intermediate matches |
-| **Stage 2: Final** | PostgreSQL | Durable, deduplicated, finalized matches |
-
-#### Write Path
-```
-Computed Matches
-      ↓
-QueueManager (bounded buffer)
-      ↓
-GraphStore.persistEdgesAsync() → MapDB (async, batched)
-      ↓
-Periodic/forced flush → streamEdges() from MapDB
-      ↓
-MatchSaver.saveFinalMatches() → PostgreSQL via COPY + UPSERT
-```
-
-#### Read Path
-- Only during finalization: stream from MapDB → aggregate per-node top-K → upsert to DB.
+## Deployment & Profiles
+- **Profile Control**: The scheduler is disabled when the `singleton` profile is active (ideal for local development)
+- **Executor Requirements**: 7 dedicated executor services for isolated workloads (batch processing, node fetch, graph build, persistence, etc.)
+- **LMDB Setup**: Configured for file-based storage with transaction support for data consistency
 
 ---
 
-## 10. **Lifecycle of a Matching Cycle**
+## Skills Demonstrated
+### Technical Skills
+- Spring Boot & Spring Scheduler for enterprise batch processing
+- Asynchronous programming with Java `CompletableFuture`
+- High-performance storage with LMDB for intermediate match persistence
+- PostgreSQL optimization with bulk `COPY` operations
+- Micrometer for observability and metrics tracking
+- Concurrency control with semaphores and thread pools
+- Fault tolerance patterns (retries, timeouts, idempotency)
+- Graceful shutdown and resource cleanup
 
-1. **Trigger**  
-   `@Scheduled` fires → `processAllDomainsScheduled()`
-
-2. **Domain/Group Locking**  
-   Acquires domain semaphore → group semaphore
-
-3. **Node Fetching**
-    - Pages through node IDs → loads full nodes in sub-batches
-    - Buffers participation history (flushed every 5 pages)
-
-4. **Graph Building**
-    - **Symmetric**: LSH index built → nodes chunked → candidates retrieved → scored → buffered
-    - **Bipartite**: Cartesian product of left/right chunks → scored → persisted immediately
-
-5. **Queue Flushing**
-    - Periodic: Based on `flushIntervalSeconds`
-    - On-demand: At end of group processing
-    - Boosted: When queue > `drainWarningThreshold`
-
-6. **Finalization**
-    - Stream all edges from MapDB
-    - Group by `referenceId`, keep top-K matches per node
-    - Bulk insert to PostgreSQL with conflict resolution
-
-7. **Cleanup**
-    - Release semaphores
-    - Delete MapDB entries for group
-    - Log duration & errors
-
----
-
-## 11. **Configuration Summary**
-
-| Category | Property | Default | Purpose |
-|--------|---------|--------|--------|
-| **Batch** | `match.batch-limit` | 500 | Nodes per page |
-| **Concurrency** | `match.max-concurrent-domains` | 2 | Global domain parallelism |
-| **LSH** | `graph.num-hash-tables` | 10 | Recall/precision tradeoff |
-| **Queue** | `match.queue.capacity` | 500,000 | Max buffered matches |
-| **Flush** | `match.flush-interval-seconds` | 5 | How often to persist |
-| **Timeouts** | `match.shutdown-limit-seconds` | 1800 | Max runtime per group |
-| **DB** | `matches.save.batch-size` | 5000 | JDBC batch size |
-
----
-
-## 12. **Failure Scenarios & Recovery**
-
-| Scenario | Behavior |
-|--------|---------|
-| Node fetch fails after retries | Skip page, log error, continue |
-| LSH index build timeout | Mark as failed, retry next page? (No — whole group fails) |
-| Graph chunk processing timeout | Retry chunk up to N times → then skip |
-| MapDB full / disk error | Exception → fallback → metrics → abort group |
-| PostgreSQL down | `saveFinalMatches` fails → circuit breaker → retry later |
-| Scheduler killed mid-run | On restart, new `cycleId` → old cycles may leave orphaned temp data (TTL cleans up) |
-
-> ⚠️ **No exactly-once semantics** – possible duplicate matches across cycles if finalization fails after DB commit but before cleanup.
-
----
-
-## 13. **Scalability Considerations**
-
-- **Horizontal Scaling**: Not supported — designed for single-node batch. To scale:
-    - Shard by `domainId` across instances
-    - Use profile `singleton` to disable on replicas
-- **Vertical Scaling**:
-    - Increase `maxConcurrentDomains`, `maxConcurrentPages`, thread pool sizes
-    - Tune LSH parameters (`numTables`, `bands`) for recall vs speed
-- **Memory**:
-    - LSH index + node cache per group → limit max nodes/group
-    - Use `-XX:+UseZGC` for low-latency GC with large heaps
-
----
-
-## 14. **Extensibility Points**
-
-| Extension Point | Current Impl | Swap With |
-|----------------|-------------|----------|
-| Edge Strategy | `MetadataEdgeBuildingStrategy` | `MLModelEdgeStrategy` |
-| Partitioning | `MetadataBasedPartitioningStrategy` | `GeospatialPartitioningStrategy` |
-| Similarity | `MetadataCompatibilityCalculator` | `EmbeddingCosineCalculator` |
-| Queue Store | `GraphStore` (MapDB) | Redis Streams / Kafka |
-| Final Match Selection | Top-K per node | ML ranking model |
-
----
-
-## 15. **Deployment & Operations**
-
-### Profiles
-- `!singleton`: Run scheduler (only on primary instance)
-- `singleton`: Disable scheduled processing (for replicas)
-
-### Monitoring Dashboard (Prometheus + Grafana)
-- **Key Panels**:
-    - Matches generated per minute (by domain/group)
-    - Batch duration percentiles
-    - Queue sizes & drop rates
-    - LSH query latency & collisions
-    - DB write throughput & errors
-    - Thread pool utilization
-
-### Alert Rules
-- `increase(match_drops_total[5m]) > 100`
-- `graph_build_errors > 0`
-- `semaphore.acquire.timeout > 0`
-- `bipartite_build_fallbacks > 0`
-
----
-
-## 16. **Trade-offs & Limitations**
-
-| Trade-off | Rationale | Risk |
-|---------|----------|------|
-| Batch-only (no streaming) | Simplicity, backpressure control | Delayed matches |
-| In-memory LSH per batch | Speed | Re-indexing cost; no cross-batch reuse |
-| MapDB as staging | Faster than direct DB writes | Extra component to operate |
-| No dedupe across cycles | Performance | Possible duplicates |
-| Single-threaded finalization per group | Simplicity | Bottleneck for large groups |
-
----
-
-## 17. **Future Improvements**
-
-1. **Delta Processing**: Only re-process changed nodes since last run.
-2. **Streaming Mode**: Real-time matching via Kafka/input topics.
-3. **Distributed Coordination**: Use ZooKeeper/Redis for leader election.
-4. **Vector Indexing**: Replace LSH with FAISS/HNSW for better accuracy.
-5. **State Checkpointing**: Resume from last successful chunk on crash.
-
----
+### Soft Skills
+- Modular, maintainable code design
+- Production-ready system architecture
+- Attention to performance optimization for large datasets
+- Comprehensive error handling and debugging capabilities
+- Clear documentation and observability for production operations
